# control-of-mobile-robots

./: .gitignore  LICENSE  README.md  lab4_task1.py  lab4_task2.py  lint.py  pyproject.toml
Lab4/: lab4_task3.py
ajbarea_U80871266_lab1/Lab1_epuck/Lab1_epuck/controllers/lab1_task2/: lab1_task2.py
ajbarea_U80871266_lab1/Lab1_epuck/Lab1_epuck/worlds/: lab1.wbt
ajbarea_U80871266_lab2/Lab2_epuck/Lab2_epuck/controllers/lab2_task1/: lab2_task1.py
ajbarea_U80871266_lab2/Lab2_epuck/Lab2_epuck/controllers/lab2_task2/: lab2_task2.py
ajbarea_U80871266_lab2/Lab2_epuck/Lab2_epuck/worlds/: lab2.wbt
ajbarea_U80871266_lab3/Lab3_epuck/Lab3_task1&2/worlds/: lab3_task1&2.wbt
ajbarea_U80871266_lab3/Lab3_epuck/Lab3_task3_corridor/worlds/: lab3_task3_corridor.wbt
ajbarea_U80871266_lab4/Lab4_epuck/Lab4_task1_and_2/worlds/: lab4_task1_and_2.wbt
ajbarea_U80871266_lab4/Lab4_epuck/Lab4_task3/worlds/: lab4_task3.wbt
ajbarea_U80871266_lab5/Lab5_epuck/Lab5_task1/worlds/: lab5_task1.wbt
ajbarea_U80871266_lab5/Lab5_epuck/Lab5_task2/worlds/: lab5_task2.wbt
ajbarea_U80871266_lab6/Lab6_task1_and_2/worlds/: lab6_task1_and_2.wbt
ajbarea_lab1/: README.md
ajbarea_lab1/Lab1_epuck/controllers/lab1_task1/: lab1_task1.py
ajbarea_lab1/webots/controllers/lab1_task1/: lab1_task1.py
ajbarea_lab1/webots/controllers/lab1_task2/: lab1_task2.py
ajbarea_lab1/webots/worlds/: lab1.wbt
ajbarea_lab2/: README.md
ajbarea_lab2/Lab2_epuck/controllers/lab2_task2/: lab2_task2.py
ajbarea_lab2/webots/controllers/lab2_task1/: lab2_task1.py
ajbarea_lab2/webots/controllers/lab2_task3/: lab2_task3.py
ajbarea_lab2/webots/worlds/: lab2.wbt
ajbarea_lab3/Lab3_epuck/Lab3_task1&2/controllers/lab3_task1/: lab3_task1.py
ajbarea_lab3/Lab3_epuck/Lab3_task1&2/worlds/: lab3_task1&2.wbt
ajbarea_lab3/Lab3_epuck/Lab3_task3_corridor/worlds/: lab3_task3_corridor.wbt
ajbarea_lab3/Lab3_epuck/Lab3_task4_maze/worlds/: lab3_task4_maze.wbt
ajbarea_lab4/Lab4_epuck/Lab4_task1_and_2/worlds/: lab4_task1_and_2.wbt
ajbarea_lab4/Lab4_epuck/Lab4_task3/worlds/: lab4_task3.wbt
ajbarea_lab5/Lab5_epuck/Lab5_task1/worlds/: lab5_task1.wbt
ajbarea_lab5/Lab5_epuck/Lab5_task2/worlds/: lab5_task2.wbt
ajbarea_lab6/Lab6_task1_and_2/controllers/lab6task1/: lab6task1.py
ajbarea_lab6/Lab6_task1_and_2/controllers/lab6task2/: lab6task2.py
ajbarea_lab6/Lab6_task1_and_2/worlds/: lab6_task1_and_2.wbt
tests/: test_lab1_task1.py
(+13 files in other folders)
