[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "control-of-mobile-robots"
version = "0.1.0"
description = "Control of Mobile Robots - Webots simulation labs"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "AJ Barea" }
]
dependencies = [
    # Webots controller dependencies are handled by Webots
]

[tool.setuptools]
packages = ["tests"]

[tool.pytest.ini_options]
pythonpath = [
    ".", 
    "ajbarea_lab1/webots/controllers", 
    "ajbarea_lab2/Lab2_epuck/controllers",
    "ajbarea_lab3/Lab3_epuck/Lab3_task1&2/controllers",
    "ajbarea_lab3/Lab3_epuck/Lab3_task3_corridor/controllers", 
    "ajbarea_lab3/Lab3_epuck/Lab3_task4_maze/controllers",
    "ajbarea_lab4/Lab4_epuck/Lab4_task1_and_2/controllers",
    "ajbarea_lab4/Lab4_epuck/Lab4_task3/controllers",
    "ajbarea_lab5/Lab5_epuck/Lab5_task1/controllers",
    "ajbarea_lab5/Lab5_epuck/Lab5_task2/controllers",
    "ajbarea_lab6/Lab6_task1_and_2/controllers"
]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore:datetime.datetime.utcnow.*:DeprecationWarning",
]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests (may require Webots)",
    "lab1: marks tests related to lab 1",
    "lab2: marks tests related to lab 2", 
    "lab3: marks tests related to lab 3",
    "lab4: marks tests related to lab 4",
    "lab5: marks tests related to lab 5",
    "lab6: marks tests related to lab 6",
]

[project.optional-dependencies]
testing = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
]

[tool.flake8]
ignore = ["E501", "W503", "E203"]
exclude = [
    ".git", 
    "__pycache__", 
    "*.egg-info", 
    "build", 
    "dist",
    "ajbarea_lab*/webots/worlds",
    "ajbarea_lab*/docs"
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
    # Exclude Webots world files and generated files
    ajbarea_lab.*/webots/worlds
    | ajbarea_lab.*/docs
)/
'''